// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import squashed union with native protobuf generates nexus DSLs: edgecases/import_squashed_union/pkg1/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg1/types.proto

/* eslint-disable */

import * as nexus from \\"nexus\\";
import * as proto_nexus from \\"proto-nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg1$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg1/types_pb\\";
export type _$testapis$edgecases$import_squashed_union$pkg1$types_pb$OneofMessage1 = _$testapis$edgecases$import_squashed_union$pkg1$types_pb.OneofMessage1;
export const OneofMessage1 = nexus.objectType({
    name: \\"OneofMessage1\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nexus.nonNull(\\"String\\"),
            resolve(root) {
                const value = root.getBody();
                return value;
            },
            extensions: {
                ...({
                    protobufField: {
                        name: \\"body\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    isTypeOf(data: unknown) {
        return data instanceof _$testapis$edgecases$import_squashed_union$pkg1$types_pb.OneofMessage1;
    },
    sourceType: { module: __filename, export: \\"_$testapis$edgecases$import_squashed_union$pkg1$types_pb$OneofMessage1\\" },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\",
                name: \\"OneofMessage1\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
export const OneofMessage1Input = Object.assign(nexus.inputObjectType({
    name: \\"OneofMessage1Input\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nexus.nonNull(\\"String\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"body\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\",
            name: \\"OneofMessage1\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"OneofMessage1Input\\"]): _$testapis$edgecases$import_squashed_union$pkg1$types_pb.OneofMessage1 => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg1$types_pb.OneofMessage1();
        output.setBody(input.body);
        return output;
    },
    _protoNexus: {
        fields: {
            body: {
                type: nexus.nonNull(\\"String\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"body\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
export const SquashedOneofInput = Object.assign(nexus.inputObjectType({
    name: \\"SquashedOneofInput\\",
    definition(t) {
        t.field(\\"msg1\\", {
            type: nexus.nullable(\\"OneofMessage1Input\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg1\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg1.SquashedOneof\\",
            name: \\"SquashedOneof\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"SquashedOneofInput\\"]): _$testapis$edgecases$import_squashed_union$pkg1$types_pb.SquashedOneof => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg1$types_pb.SquashedOneof();
        if (input.msg1 != null) {
            output.setMsg1(OneofMessage1Input.toProto(input.msg1));
        }
        return output;
    },
    _protoNexus: {
        fields: {
            msg1: {
                type: nexus.nullable(\\"OneofMessage1Input\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"msg1\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
export const SquashedOneof = nexus.unionType({
    name: \\"SquashedOneof\\",
    definition(t) {
        t.members(OneofMessage1);
    },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg1.SquashedOneof\\",
                name: \\"SquashedOneof\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg1\\",
                fields: [
                    {
                        name: \\"msg1\\",
                        type: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\"
                    }
                ]
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
"
`;

exports[`import squashed union with native protobuf generates nexus DSLs: edgecases/import_squashed_union/pkg2/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg2/types.proto

/* eslint-disable */

import * as nexus from \\"nexus\\";
import * as proto_nexus from \\"proto-nexus\\";
import * as __$pkg1$types_pb_nexus from \\"../pkg1/types_pb_nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg1$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg1/types_pb\\";
import * as _$testapis$edgecases$import_squashed_union$pkg2$types_pb from \\"./testapis/edgecases/import_squashed_union/pkg2/types_pb\\";
export type _$testapis$edgecases$import_squashed_union$pkg2$types_pb$Message = _$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message;
export const Message = nexus.objectType({
    name: \\"Message\\",
    definition(t) {
        t.field(\\"msg\\", {
            type: nexus.nullable(\\"SquashedOneof\\"),
            resolve(root) {
                const value = root.getMsg();
                if (value == null) {
                    return null;
                }
                switch (value.getMessageCase()) {
                    case _$testapis$edgecases$import_squashed_union$pkg1$types_pb.SquashedOneof.MessageCase.MESSAGE_NOT_SET: {
                        return null;
                    }
                    case _$testapis$edgecases$import_squashed_union$pkg1$types_pb.SquashedOneof.MessageCase.MSG1: {
                        return value.getMsg1()!;
                    }
                    default: {
                        throw \\"unreachable\\";
                    }
                }
            },
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    isTypeOf(data: unknown) {
        return data instanceof _$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message;
    },
    sourceType: { module: __filename, export: \\"_$testapis$edgecases$import_squashed_union$pkg2$types_pb$Message\\" },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg2.Message\\",
                name: \\"Message\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg2\\"
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
export const MessageInput = Object.assign(nexus.inputObjectType({
    name: \\"MessageInput\\",
    definition(t) {
        t.field(\\"msg\\", {
            type: nexus.nullable(\\"SquashedOneofInput\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg2.Message\\",
            name: \\"Message\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg2\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"MessageInput\\"]): _$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg2$types_pb.Message();
        if (input.msg != null) {
            output.setMsg(__$pkg1$types_pb_nexus.SquashedOneofInput.toProto(input.msg));
        }
        return output;
    },
    _protoNexus: {
        fields: {
            msg: {
                type: nexus.nullable(\\"SquashedOneofInput\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"msg\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
"
`;

exports[`import squashed union with protobufjs generates nexus DSLs: edgecases/import_squashed_union/pkg1/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg1/types.proto

/* eslint-disable */

import * as nexus from \\"nexus\\";
import * as proto_nexus from \\"proto-nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg1 from \\"./testapis/edgecases/import_squashed_union/pkg1\\";
export type _$testapis$edgecases$import_squashed_union$pkg1$testapis$edgecases$import_squashed_union$pkg1$OneofMessage1 = _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.OneofMessage1;
export const OneofMessage1 = nexus.objectType({
    name: \\"OneofMessage1\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nexus.nonNull(\\"String\\"),
            resolve(root) {
                const value = root.body;
                if (value == null) {
                    throw new Error(\\"Cannot return null for non-nullable field\\");
                }
                return value;
            },
            extensions: {
                ...({
                    protobufField: {
                        name: \\"body\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    isTypeOf(data: unknown) {
        return data instanceof _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.OneofMessage1;
    },
    sourceType: { module: __filename, export: \\"_$testapis$edgecases$import_squashed_union$pkg1$testapis$edgecases$import_squashed_union$pkg1$OneofMessage1\\" },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\",
                name: \\"OneofMessage1\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
export const OneofMessage1Input = Object.assign(nexus.inputObjectType({
    name: \\"OneofMessage1Input\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nexus.nonNull(\\"String\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"body\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\",
            name: \\"OneofMessage1\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"OneofMessage1Input\\"]): _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.OneofMessage1 => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.OneofMessage1();
        output.body = input.body;
        return output;
    },
    _protoNexus: {
        fields: {
            body: {
                type: nexus.nonNull(\\"String\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"body\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
export const SquashedOneofInput = Object.assign(nexus.inputObjectType({
    name: \\"SquashedOneofInput\\",
    definition(t) {
        t.field(\\"msg1\\", {
            type: nexus.nullable(\\"OneofMessage1Input\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg1\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg1.SquashedOneof\\",
            name: \\"SquashedOneof\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg1\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"SquashedOneofInput\\"]): _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.SquashedOneof => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg1.testapis.edgecases.import_squashed_union.pkg1.SquashedOneof();
        if (input.msg1 != null) {
            output.msg1 = OneofMessage1Input.toProto(input.msg1);
        }
        return output;
    },
    _protoNexus: {
        fields: {
            msg1: {
                type: nexus.nullable(\\"OneofMessage1Input\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"msg1\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
export const SquashedOneof = nexus.unionType({
    name: \\"SquashedOneof\\",
    definition(t) {
        t.members(OneofMessage1);
    },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg1.SquashedOneof\\",
                name: \\"SquashedOneof\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg1\\",
                fields: [
                    {
                        name: \\"msg1\\",
                        type: \\"testapis.edgecases.import_squashed_union.pkg1.OneofMessage1\\"
                    }
                ]
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
"
`;

exports[`import squashed union with protobufjs generates nexus DSLs: edgecases/import_squashed_union/pkg2/types_pb_nexus.ts 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: testapis/edgecases/import_squashed_union/pkg2/types.proto

/* eslint-disable */

import * as nexus from \\"nexus\\";
import * as proto_nexus from \\"proto-nexus\\";
import * as __$pkg1$types_pb_nexus from \\"../pkg1/types_pb_nexus\\";
import * as _$testapis$edgecases$import_squashed_union$pkg2 from \\"./testapis/edgecases/import_squashed_union/pkg2\\";
export type _$testapis$edgecases$import_squashed_union$pkg2$testapis$edgecases$import_squashed_union$pkg2$Message = _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message;
export const Message = nexus.objectType({
    name: \\"Message\\",
    definition(t) {
        t.field(\\"msg\\", {
            type: nexus.nullable(\\"SquashedOneof\\"),
            resolve(root) {
                const value = root.msg;
                if (value == null) {
                    return null;
                }
                if (value.msg1) {
                    return value.msg1;
                }
                return null;
            },
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    isTypeOf(data: unknown) {
        return data instanceof _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message;
    },
    sourceType: { module: __filename, export: \\"_$testapis$edgecases$import_squashed_union$pkg2$testapis$edgecases$import_squashed_union$pkg2$Message\\" },
    extensions: {
        ...({
            protobufMessage: {
                fullName: \\"testapis.edgecases.import_squashed_union.pkg2.Message\\",
                name: \\"Message\\",
                package: \\"testapis.edgecases.import_squashed_union.pkg2\\"
            }
        } as proto_nexus.ProtobufMessageExtensions)
    }
});
export const MessageInput = Object.assign(nexus.inputObjectType({
    name: \\"MessageInput\\",
    definition(t) {
        t.field(\\"msg\\", {
            type: nexus.nullable(\\"SquashedOneofInput\\"),
            extensions: {
                ...({
                    protobufField: {
                        name: \\"msg\\"
                    }
                } as proto_nexus.ProtobufFieldExtensions)
            }
        });
    },
    extensions: {
        protobufMessage: {
            fullName: \\"testapis.edgecases.import_squashed_union.pkg2.Message\\",
            name: \\"Message\\",
            package: \\"testapis.edgecases.import_squashed_union.pkg2\\"
        }
    }
}), {
    toProto: (input: NexusGen[\\"inputTypes\\"][\\"MessageInput\\"]): _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message => {
        const output = new _$testapis$edgecases$import_squashed_union$pkg2.testapis.edgecases.import_squashed_union.pkg2.Message();
        if (input.msg != null) {
            output.msg = __$pkg1$types_pb_nexus.SquashedOneofInput.toProto(input.msg);
        }
        return output;
    },
    _protoNexus: {
        fields: {
            msg: {
                type: nexus.nullable(\\"SquashedOneofInput\\"),
                extensions: {
                    ...({
                        protobufField: {
                            name: \\"msg\\"
                        }
                    } as proto_nexus.ProtobufFieldExtensions)
                }
            }
        }
    }
});
"
`;
